# vocom

./: .gitignore  Cargo.toml  GITHUB_COMMANDS.md  README.md  REALTIME_MIC_OFFLINE_ASR_PLAN.md  architecture.md  flutter_rust_bridge.yaml  kroko_online_test_config.json  moonshine_test_config.json  nemotron_online_test_config.json  steps.md  usage.md
.cargo/: config.toml
src/: ASRManager.rs  aec_manager.rs  asr_manager.rs  config.rs  denoiser_manager.rs  duplex_audio.rs  engine.rs  engine_handle.rs  errors.rs  ffi.rs  frb_generated.rs  lib.rs  main.rs  realtime_pipeline.rs  tts_fx.rs  tts_manager.rs  vad_manager.rs  viot.rs  wakeword.rs
src/backup/: viot.rs.bak
src/tts_sink/: android_sink.rs  cpal_sink.rs  mod.rs
