[package]
name = "vocom"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.17.3"
sherpa-onnx = { version = "1.12.34", default-features = false, features = ["shared"] }
crossbeam-channel = "0.5"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aec3 = "0.1.7"
webrtc-audio-processing = { version = "2.0.0", optional = true }

[features]
default = []
webrtc-aec = ["dep:webrtc-audio-processing"]
webrtc-aec-bundled = ["webrtc-aec", "webrtc-audio-processing/bundled"]
