[package]
name = "vocom"
version = "0.1.0"
edition = "2024"

[lib]
name = "vocom"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
cpal = "0.17.3"
sherpa-onnx = { version = "1.12.40", default-features = false, features = ["shared"] }
sherpa-onnx-sys = { version = "1.12.40", default-features = false, features = ["shared"] }
crossbeam-channel = "0.5"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aec3 = "0.1.7"
flutter_rust_bridge = "=2.12.0"

[features]
default = []

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
jni-sys = "0.3"
ndk-context = "0.1"
